--- a/index.css
+++ b/index.css
@@ -19,13 +19,22 @@ body{
 }
 
 #input{
-    width: 5.7rem;
-    height: 5rem;
+    width: 7rem;
+    height: 7rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#paragraph{
+    font-size: 4rem;
 }
 
 #input-minutes{
     width: 100%;
     height: 100%;
+    padding: 0.8rem;
     font-size: 2.7rem;
 }
 
