--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body{
     gap: 0.8rem;
 }
 
-#input{
+.div-input{
     width: 7rem;
     height: 7rem;
     display: flex;
@@ -31,7 +31,7 @@ body{
     font-size: 4rem;
 }
 
-#input-minutes{
+#input-minutes, #input-seconds{
     width: 100%;
     height: 100%;
     padding: 0.8rem;
