--- a/index.css
+++ b/index.css
@@ -13,6 +13,15 @@ body{
     gap: 3rem;
 }
 
+#container-timer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding: 2rem;
+    gap: 0.8rem;
+}
+
 .btn-group-lg{
     display: flex;
     gap: 0.8rem;
@@ -36,9 +45,4 @@ body{
     height: 100%;
     padding: 0.8rem;
     font-size: 2.7rem;
-}
-
-#container-timer{
-    display: flex;
-    flex-direction: row;
 }
